# local-media-cache

./: AGENTS.md  CLAUDE.md  README.md
agent/: pyproject.toml
agent/src/syncarr_agent/: __init__.py  aria2_client.py  client.py  config.py  main.py  reconciler.py  state.py
agent/systemd/: aria2.service  syncarr-agent.service
agent/tests/: conftest.py  test_aria2_client.py  test_client.py  test_reconciler.py  test_state.py
design/: README.md  Syncarr.html
docs/: API.md  ARCHITECTURE.md  DECISIONS.md  DEFERRED.md  DOMAIN.md  MVP.md
docs/superpowers/plans/: 2026-05-06-client-install-script.md  2026-05-07-stage7-unblock.md  2026-05-08-pipeline-status-redesign.md
docs/superpowers/specs/: .codex-review-prompt-v2.txt  .codex-review-prompt.txt  2026-05-08-codex-review-output.txt  2026-05-08-codex-review-v2-output.txt  2026-05-08-pipeline-status-redesign-design.md  2026-05-08-pipeline-status-redesign-review-codex-v2.md  (+1 more)
scripts/: path_spike.py  stage7_resilience.ps1
server/: Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  syncarr.db
server/alembic/: env.py
server/alembic/versions/: 0001_initial_schema.py  0002_passthrough_profile.py  0003_assignment_progress.py  0004_pipeline_status_columns.py  0005_transfer_mode.py
server/src/syncarr_server/: auth.py  config.py  db.py  main.py  models.py  pipeline.py  resolver.py  schemas.py  transcoder.py
server/src/syncarr_server/providers/: __init__.py  base.py  plex.py
server/src/syncarr_server/routes/: agent.py  installer.py  media_browse.py  ui.py
server/src/syncarr_server/services/: rate_tracker.py
server/tests/: conftest.py  test_agent_routes.py  test_eviction.py  test_media_browse.py  test_pipeline.py  test_rate_tracker.py  test_resolver.py  test_routes_queue.py  test_startup.py  test_transcoder.py  test_ui_routes.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  index.css  tokens.css  types.ts
(+12 files in other folders)
